--- a/client/public/index.html
+++ b/client/public/index.html
@@ -2,8 +2,8 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8">
-    <link href="" rel="stylesheet" type="text/css">
-    <title>JAMBUlerplate? JAMBUlerGREAT!</title>
+    <link href="/reset.css" rel="stylesheet" type="text/css">
+    <title>jambu</title>
   </head>
   <body>
     <div id="root"></div>
